@@ -48,3 +48,5 @@ gneutronica 0.24
 
 	* Added capability to import the patterns from another song.
 
+	* Added "volume zoom" capability
+
